# ai_git

./: .gitignore  .rubocop.yml  AGENTS.md  CMakeLists.txt  Gemfile  README.md  Rakefile  ai_git-0.1.0.gem  ai_git.gemspec  opencode.json
.github/workflows/: ci.yml  freebsd.yml  openbsd78.yml  opensuse.yml
lib/: ai_git.rb
lib/ai_git/: config.rb  default.rb  git.rb  ollama.rb  review.rb  version.rb
src/: git.cpp  main.cpp  ollama.cpp
test/: test_helper.rb
test/ai_git/: test_default.rb  test_git.rb  test_ollama.rb  test_review.rb
